# style_transfer

./: README.md  metric.py  pyproject.toml
configs/: exp_eg.yaml
data/: HT16-5845 A4 HE.geojson  HT16-5845 A4 Ki67.geojson  slice_ndpi.py
style_transfer/: SVRE.py  algos.py  algos_test.py  best_param_ogda.json  cycle_loss.py  dataset.py  gen_loss.py  hyperparam_tune.py  metric.py  networks.py  slice_ndpi.py  test.py  train.py  train_cycleGAN+EG.py  train_cycleGAN.py  tune.py
style_transfer/algos/: adam.py  eg.py  odga.py  optimistic_adam.py
style_transfer/hyper_tune/: best_param_eg.json
style_transfer/optim/: extragradient.py  optimistic.py
